Fix overflow problem

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -7,15 +7,17 @@ h2 {
 
 .nav {
   @include flexSpaceBetween(row);
-  padding: 0 1rem 0 1rem;
   width: 100%;
   height: 4rem;
   margin-bottom: 5vh;
+
+  &__item {
+    margin: 10px;
+  }
 }
 
 .burger-menu {
   display: inline-block;
-  padding: 10px;
   border-radius: 25px;
   cursor: pointer;
 
