--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,14 +13,13 @@ html, body {
   background-position: fixed; 
   background-repeat: no-repeat;
   background-size: cover;
-  max-height: 100vh;
-  max-width: 100vw;
   margin: 0;
+  padding: 0;
+  width: 100vw;
+  overflow-y: scroll
 }
 
 .container {
-  height: auto;
   @include flexCenter(column);
-  width: 100vw;
   font-family: Rockwell;
 }
